# test_driven_dev_w_python

./: .gitignore  .pre-commit-config.yaml  README.md  functional_test.py  manage.py  pyproject.toml  setup.cfg
accounts/: authentication.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200104_0244.py  0003_auto_20200105_2056.py
accounts/tests/: test_authentication.py  test_models.py  test_views.py
deploy_tools/: fabfile.py  gunicorn-systemd.template.service  nginx.template.conf  provisioning_notes.md
functional_tests/: base.py  list_page.py  my_lists_page.py  server_tools.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_sharing.py  test_simple_list_creation.py  tests.py
lists/: forms.py  models.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_list_item_unique_together.py  0006_list_owner.py  0007_list_shared_with.py
lists/static/: base.css  list.js
lists/static/tests/: tests.html
lists/templates/: base.html  home.html  list.html  my_lists.html
lists/tests/: test_forms.py  test_models.py  test_views.py
superlists/: settings.py  urls.py  wsgi.py
