[tool.poetry]
name = "superlists"
version = "0.1.0"
description = ""
authors = ["Qiong Zeng <xinyufeifei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
selenium = "^3.141"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.740.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
