[tool.poetry]
name = "superlists"
version = "0.1.0"
description = ""
authors = ["Qiong Zeng <xinyufeifei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
gunicorn = "^20.0"
django = "^3.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.740.0"
flake8 = "^3.7"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
